SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/CloudServiceProviderContract__c.object
<CustomObject>
    <fields>
        <fullName>Awardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awardee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CloudServiceProviderContract</relationshipLabel>
        <relationshipName>CloudServiceProviderContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSP_Contract_Acronym__c</fullName>
        <label>CSP Contract Acronym</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Contract_Name__c</fullName>
        <label>CSP Contract Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <label>CloudServiceProviderContract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSP-{00000}</displayFormat>
        <label>CSP Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudServiceProviderContract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>